--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,6 @@ gems:
   - jekyll-sitemap
 
 name: Zach Holman
-url: https://zachholman.com/left
-description: A fantastic blog that is fantastic.
-twitter: holman
+url: https://rafaelsuchy.github.io
+description: Economics is fantastic.
+twitter: NaN
